--- a/dev/scss/sections/_lineup.scss
+++ b/dev/scss/sections/_lineup.scss
@@ -7,11 +7,19 @@
         margin-left: 16px;
         padding-bottom: 10px;
     }
+    @include md{
+        padding-bottom: 40px;
+    }
 
+    @include lg{
+        padding-bottom: 54px;
+    }
+    
     @include xxl{
         display: grid;
         grid-template-columns: auto 1440px auto;
         grid-template-areas: ". line-up .";
+        padding-bottom: 64px;
     }
 
     >div{
@@ -22,6 +30,7 @@
         ul{
             display: grid;
             gap: 16px;
+            padding-bottom: 24px;
               
             @include md {
                 grid-template-columns: repeat(4,1fr);
