Link minihero complete

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -13,6 +13,12 @@ html {
 :root {
   --black: #000000;
   --white: #ffffff;
+  --pink: #FF9CA1;
+  --darkpink: #E26D73;
+  --darkblue: #293241;
+  --blue: #315992;
+  --lightblue: #A9C3E9;
+  --red: #ED1A25;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -384,7 +390,7 @@ textarea {
     Header
 ============= */
 header #logo-nav {
-  background-color: rgb(41, 50, 65);
+  background-color: var(--darkblue);
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". logo-nav .";
@@ -399,23 +405,28 @@ header #search {
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". search .";
+  padding: 16px 0px;
+}
+@media (min-width: 768px) {
+  header #search {
+    padding: 24px 0px;
+  }
 }
 header #search div {
   grid-area: search;
 }
-header #search div ul {
+header #search div ul li form {
   display: flex;
   align-items: center;
-  padding: 16px 0px;
 }
-@media (min-width: 1440px) {
-  header #search div ul {
-    margin: 0px 200px;
-  }
+header #search div ul li form input {
+  border: 1px solid red;
+  width: 100%;
 }
 header #search div ul li button {
   border: none;
   background-color: transparent;
+  border-radius: 5px;
 }
 header #search div ul #searchbutton {
   margin-left: auto;
@@ -430,6 +441,11 @@ footer {
   grid-template-areas: ". footer .";
   background-color: rgb(41, 50, 65);
   color: rgb(253, 217, 219);
+}
+@media (min-width: 1440px) {
+  footer {
+    grid-template-columns: auto 1200px auto;
+  }
 }
 footer > div {
   grid-area: footer;
@@ -476,6 +492,9 @@ footer > div #f3 ul li {
 /* =============
     Hero
 ============= */
+#hero section {
+  background-color: var(--darkpink);
+}
 @media (min-width: 768px) {
   #hero section {
     display: grid;
@@ -514,11 +533,8 @@ footer > div #f3 ul li {
 #hero section aside > div .hero-a3 {
   margin-left: auto;
 }
-#hero section #hero-left {
-  background-color: rgb(226, 109, 115);
-}
 #hero section #hero-right {
-  background-color: rgb(255, 156, 161);
+  background-color: var(--pink);
 }
 
 /* =============
@@ -537,8 +553,18 @@ footer > div #f3 ul li {
 }
 @media (min-width: 1440px) {
   #miniheros {
-    grid-template-columns: auto 1200px auto;
+    grid-template-columns: auto 1000px auto;
   }
+}
+#miniheros > div {
+  color: white;
+}
+#miniheros > div a:link, #miniheros > div a:visited {
+  color: white;
+  text-decoration: none;
+  padding: 4px 10px;
+  background-color: var(--red);
+  display: inline-block;
 }
 @media (min-width: 768px) {
   #miniheros > div {
@@ -558,17 +584,14 @@ footer > div #f3 ul li {
   display: flex;
   align-items: center;
 }
-#miniheros > div .minihero-content > div section {
-  padding: 18px 16px 15px;
-}
 #miniheros > div .minihero-content > div a {
   padding: 22px 0px 24px;
 }
 #miniheros > div .minihero-content #minihero-left {
-  background-color: rgb(49, 89, 146);
+  background-color: var(--blue);
 }
 #miniheros > div .minihero-content #minihero-right {
-  background-color: rgb(49, 89, 146);
+  background-color: var(--blue);
 }
 
 /* =============
@@ -687,69 +710,76 @@ footer > div #f3 ul li {
   grid-template-areas: ". lineup-content .";
 }
 #lineup > div ul li section > div {
-  background: rgb(169, 195, 233);
+  background: var(--lightblue);
   grid-area: lineup-content;
   padding: 10px 16px 19px 15px;
 }
+#lineup > div ul li section > div a:link, #lineup > div ul li section > div a:visited {
+  color: white;
+  text-decoration: none;
+  padding: 4px 10px;
+  background-color: var(--red);
+  display: inline-block;
+}
 @media (min-width: 768px) {
-  #lineup > div ul li section > div {
+  #lineup > div ul li section > div a:link, #lineup > div ul li section > div a:visited {
     padding: 19px 18px 27px 17px;
   }
 }
 @media (min-width: 1024px) {
-  #lineup > div ul li section > div {
+  #lineup > div ul li section > div a:link, #lineup > div ul li section > div a:visited {
     padding: 18px 16px 24px 15px;
   }
 }
-#lineup > div ul li section > div p {
+#lineup > div ul li section > div a:link p, #lineup > div ul li section > div a:visited p {
   padding: 20px 0 16px;
 }
 @media (min-width: 768px) {
-  #lineup > div ul li section > div p {
+  #lineup > div ul li section > div a:link p, #lineup > div ul li section > div a:visited p {
     padding: 24px 0;
   }
 }
 @media (min-width: 768px) {
-  #lineup > div #l1 {
+  #lineup > div ul #l1 {
     grid-area: l1;
     margin-left: 16px;
   }
 }
 @media (min-width: 1024px) {
-  #lineup > div #l1 {
+  #lineup > div ul #l1 {
     margin-left: 16px;
   }
 }
 @media (min-width: 768px) {
-  #lineup > div #l2 {
+  #lineup > div ul #l2 {
     grid-area: l2;
     margin-right: 16px;
   }
 }
 @media (min-width: 1024px) {
-  #lineup > div #l2 {
+  #lineup > div ul #l2 {
     margin-right: 16px;
   }
 }
 @media (min-width: 768px) {
-  #lineup > div #l3 {
+  #lineup > div ul #l3 {
     grid-area: l3;
     margin-left: 16px;
   }
 }
 @media (min-width: 1024px) {
-  #lineup > div #l3 {
+  #lineup > div ul #l3 {
     margin-left: 16px;
   }
 }
 @media (min-width: 768px) {
-  #lineup > div #l4 {
+  #lineup > div ul #l4 {
     grid-area: l4;
     margin-right: 16px;
   }
 }
 @media (min-width: 768px) {
-  #lineup > div #l5 {
+  #lineup > div ul #l5 {
     grid-area: l5;
   }
 }
