--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -23,5 +23,11 @@ $screen-xxl-min: 1440px;
 :root {
   --black: #000000;
   --white: #ffffff;
+  --pink: #FF9CA1;
+  --darkpink: #E26D73;
+  --darkblue: #293241;
+  --blue: #315992;
+  --lightblue: #A9C3E9;
+  --red: #ED1A25;
 }
 
