--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -9,6 +9,10 @@ footer{
     background-color:  rgba(41, 50, 65, 1);
     color: rgba(253, 217, 219, 1);
 
+    @include xxl{
+        grid-template-columns: auto 1200px auto;
+    }
+
     >div{
         grid-area: footer;
 
@@ -32,9 +36,10 @@ footer{
             
 
             padding: 48px 0px;
-
-        @include xxl{}
         }
+
+
+        
 
         #f1{
             @include md{
@@ -67,3 +72,4 @@ footer{
         }
     }
 }
+
