--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,63 +1,69 @@
 /* =============
     Header
 ============= */
-header{
-    #logo-nav{
-        background-color:  rgba(41, 50, 65, 1);
+header {
+    #logo-nav {
+        background-color: var(--darkblue);
         display: grid;
         grid-template-columns: 16px auto 16px;
         grid-template-areas: ". logo-nav .";
-       
-        >div{
-            grid-area: logo-nav;
-            img{
 
-            }
+        >div {
+            grid-area: logo-nav;
+
+            img {}
         }
-        img{
-            padding: 20px 0px  
+
+        img {
+            padding: 20px 0px
         }
     }
-    
-    #search{
+
+    #search {
         display: grid;
         grid-template-columns: 16px auto 16px;
         grid-template-areas: ". search .";
-       
-        div{
+        padding: 16px 0px;
+
+        @include md {
+            padding: 24px 0px;
+        }
+
+        div {
             grid-area: search;
-            ul{
-                display: flex;
-                align-items: center;
-                padding: 16px 0px;
 
-                @include xxl{
-                    margin: 0px 200px;
-                }
-                li{
-                    form{
+            ul {
 
-                        input{
-        
+
+                li {
+                    form {
+                        display: flex;
+                        align-items: center;
+
+
+                        input {
+                            border: 1px solid red;
+                            width: 100%;
                         }
-        
+
                     }
-                    button{
+
+                    button {
                         border: none;
                         background-color: transparent;
-                        img{
-                            
-                        }
+                        border-radius: 5px;
+
+                        img {}
                     }
                 }
-                #searchbutton{
-                    margin-left: auto ;
+
+                #searchbutton {
+                    margin-left: auto;
                 }
             }
-           
-            
-            
+
+
+
         }
     }
 }
-     
