--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -3,6 +3,11 @@
 ============= */
 #hero{
     section{
+        color: white;
+        a:link, a:visited{
+            color: white;
+        }
+
         @include md{
             display: grid;
             grid-template-columns: 40% auto;
