--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,3 +1,12 @@
 /* =============
     Buttons
 ============= */
+.red-button{
+ a:link, a:visited{
+        color: white;
+        text-decoration: none;
+        padding: 4px 10px;
+        background-color: var(--red);
+        display:inline-block;
+    }
+}
