--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -23,6 +23,7 @@ $screen-xxl-min: 1440px;
 :root {
   --black: #000000;
   --white: #ffffff;
+  --lightpink: #FFF3F4;
   --pink: #FF9CA1;
   --darkpink: #E26D73;
   --darkblue: #293241;
