--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -38,7 +38,7 @@ header {
                 li {
                     form {
                         display: flex;
-                        align-items: center;
+                        justify-content: center;
 
 
                         input {
@@ -67,3 +67,5 @@ header {
         }
     }
 }
+
+
