--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -3,6 +3,7 @@
 ============= */
     .red-button{
         background-color: var(--red);
+        text-decoration: none;
         color: white;
         padding: 8px 16px;
         display: inline-block;
